fix the dark mode background color

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -236,7 +236,7 @@ svg {
         :root {
             --background: #FFF;
             --text: #000;
-            --highlight: #ff6564;
+            --highlight: #4d4a4a;
        }
 
        #mode_div{
@@ -279,7 +279,7 @@ svg {
         .dark-theme {
             --background: #010221;
             --text: #c6c6ca;
-          --highlight: #ff6564;
+          --highlight: #4d4a4a;
             background: var(--background);
        }
         .dark-theme .color-switch {
